# CubieT

./: contract.sol  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/cubiet/: config.py  cubie.py  image.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.js  utils.js
frontend/src/pages/list/: index.js
frontend/src/pages/loading/: index.js
frontend/src/pages/menu/: index.js
frontend/src/pages/mint/: index.js
frontend/src/web3api/: index.js
frontend/src/web3api/abi/: cubiet.js
twophase/: Dockerfile
